<resources>
    <string name="app_name">金指投</string>
    <string name="verson_name">3.0.3</string>
    <string name="input_tel">请输入手机号码</string>
    <string name="input_password">请输入密码</string>
    <string name="confirm_password">请确认密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登录</string>
    <string name="no_id">没有账号</string>
    <string name="wechat_login">使用微信登录</string>
    <string name="find_password">找回密码</string>
    <string name="input_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="set_password">设置密码</string>
    <string name="password_limit">密码长度为 6-20 位\n格式为数字 大小写字母</string>
    <string name="confirm">确定</string>
    <string name="register_ID">注册账号</string>
    <string name="tel_limit">请输入正确的手机号码\n以便接收短信验证码</string>
    <string name="input_invite_code">请输入指环码</string>
    <string name="input_invite_code2">请输入指环码 (选填)</string>
    <string name="register">注册</string>
    <string name="agreed_and_read">已阅读并同意</string>
    <string name="user_agreement">《金指投用户协议》</string>
    <string name="password_limit2">长度6-20位数字 大小写字母</string>
    <string name="improve_info">完善信息</string>
    <string name="select_user_image">请选择您的头像</string>
    <string name="select_user_type">请选择您的身份</string>
    <string name="user_type_xiangmufang">项目方</string>
    <string name="user_type_touziren">投资人</string>
    <string name="user_type_touzijigou">投资机构</string>
    <string name="user_type_zhinangtuan">智囊团</string>
    <string name="complete_register">完成注册</string>
    <string name="goto_try">完成注册 进入试用模式</string>
    <string name="congratulation_register_succeed">恭喜！！您已完成注册</string>
    <string name="get_invite_code">获得指环码一枚</string>
    <string name="id_card_photo">身份证照片</string>
    <string name="ps_good_photo">注：清晰的照片可以快速通过审核</string>
    <string name="add_photo">添加照片</string>
    <string name="id_card_zheng">身份证正面</string>
    <string name="id_card_fan">身份证反面</string>
    <string name="id_card_num">身份证号码</string>
    <string name="input_id_card_num">请输入身份证号码</string>
    <string name="real_name">真实姓名</string>
    <string name="input_real_name">请输入真实姓名</string>
    <string name="company_name">公司名称</string>
    <string name="input_company_name">请输入公司名称</string>
    <string name="company_addr">公司所在地</string>
    <string name="select_company_addr">请选择公司所在地</string>
    <string name="business_license_photo">营业执照照片(正副本均可)</string>
    <string name="business_license_num">营业执照注册号</string>
    <string name="input_business_license_num">请输入营业执照注册号</string>
    <string name="business_field">投资领域</string>
    <string name="select_business_field">请选择投资领域</string>
    <string name="position">担任职务</string>
    <string name="input_position">请输入担任职务</string>
    <string name="desc_company">公司介绍  (选填)</string>
    <string name="input_desc_company">写一写公司介绍</string>
    <string name="desc_name">个人介绍  (选填)</string>
    <string name="input_desc_name">写一写个人介绍</string>
    <string name="complete">完成</string>
    <string name="could_multiple_choice">可多选</string>
    <string name="project">项目</string>
    <string name="investor">投资人</string>
    <string name="circle">圈子</string>
    <string name="activity">活动</string>
    <string name="project_roadshow">路演项目</string>
    <string name="project_preselection">预选项目</string>
    <string name="invest_alert">温馨提示:\n1、此处领投，跟投仅为用户意向，待项目达成后项目方会协同各方确定最为合适的领投方；\n2、特别注意：投资金额后面的单位为“万”</string>
    <string name="weirenzheng">温馨提示：\n\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020实名认证用户可以获得更多的权限，只有实名认证用户才可以参与平台股权投融资</string>
    <string name="renzhengzhong">温馨提示：\n\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u00201.实名认证用户可以获得更多的权限，只有实名认证用户才可以参与平台股权投融资\n\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u00202.将于两个工作日内进行审核</string>
    <string name="renzhengshibai">系统提示：\n\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020您的实名认证信息未通过审核，具体原因请参看短信或系统通知</string>
    <string name="desc_xiangmufang">具有优质项目标的，想通过释放股权进行融资，有梦想的创业者、企业家。</string>
    <string name="desc_touziren">具有投资意识、投资能力，正在寻找股权投资标的的高净值投资人及企业家。</string>
    <string name="desc_touzijigou">国内外优秀VC/PE机构、创投机构、专业投资人、金指投领投机构及领投人。</string>
    <string name="desc_zhinangruan">著名投资人、企业家及创业者、证券从业者、会计师、律师、企业管理咨询师等，能为企业快速发展提供建设性意见和建议的“牛”人。</string>
    <string name="net_error">网络好像出了点问题，检查一下</string>

    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_first">已到最新一页</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_last">已到最后一页</string>
    <string name="load_fail">加载失败</string>

    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>

    <string-array name="chose_photo">
        <item>打开照相机</item>
        <item>从相册选择</item>
    </string-array>

    <string-array name="banks">
        <item>交通银行</item>
        <item>中国光大银行</item>
        <item>上海浦发发展银行</item>
        <item>中国农业银行</item>
        <item>中信银行</item>
        <item>中国建设银行</item>
        <item>中国民生银行</item>
        <item>中国平安银行</item>
        <item>中国邮政储蓄</item>
        <item>招商银行</item>
        <item>兴业银行</item>
        <item>中国工商银行</item>
        <item>中国银行</item>
        <item>北京银行</item>
        <item>广发银行</item>
        <item>华夏银行</item>
        <item>西安市商业银行</item>
        <item>上海银行</item>
        <item>天津市商业银行</item>
        <item>深圳农村商业银行</item>
        <item>北京农商银行</item>
        <item>杭州市商业银行</item>
        <item>昆仑银行</item>
        <item>郑州银行</item>
        <item>温州银行</item>
        <item>汉口银行</item>
        <item>南京银行</item>
        <item>厦门银行</item>
        <item>南昌银行</item>
        <item>江苏银行</item>
        <item>东亚银行</item>
        <item>成都银行</item>
        <item>宁波银行</item>
        <item>长沙银行</item>
        <item>河北银行</item>
        <item>广州银行</item>
    </string-array>

    <string name="viewpager_indicator">%1$d/%2$d</string>

</resources>
