<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_certification"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/title_back" />

    <EditText
        android:id="@+id/wechat_verify_ed_tel"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/bg_ed_wechat_verify"
        android:hint="@string/input_tel"
        android:paddingLeft="15dp"
        android:textColorHint="#b5b5b5"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginTop="14dp">

        <EditText
            android:id="@+id/wechat_verify_ed_code"
            android:layout_width="182dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ed_wechat_verify_left"
            android:hint="@string/input_code"
            android:paddingLeft="15dp"
            android:textColorHint="#b5b5b5"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/wechat_verify_tv_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ed_wechat_code_orange"
            android:gravity="center"
            android:text="@string/get_code"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/wechat_verify_ed_invite_code"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_ed_wechat_verify"
        android:hint="@string/input_invite_code2"
        android:paddingLeft="15dp"
        android:textColorHint="#b5b5b5"
        android:textSize="16sp" />

    <Button
        android:id="@+id/wechat_verify_btn_next"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/bg_code_orange"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13.5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/wechat_verify_cb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/selector_wechat_agreement_check_btn"
            android:drawablePadding="9dp"
            android:text="@string/agreed_and_read"
            android:textColor="#747474"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/wechat_verify_tv_user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="@color/custom_orange"
            android:textSize="13sp" />
    </LinearLayout>
</LinearLayout>
