<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_certification"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/title_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="268dp"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/certification_tv_comp_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/business_license_photo"
            android:textColor="#1b1b1b"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/ps_good_photo"
            android:textColor="#747474"
            android:textSize="12sp" />

        <RelativeLayout
            android:id="@+id/certification_rl_comp_photo"
            android:layout_width="312dp"
            android:layout_height="188dp"
            android:layout_marginTop="11dp"
            android:background="@color/bg_add_photo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/iconfont_add_plus"
                android:text="@string/add_photo"
                android:textColor="#747474"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="9dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:id="@+id/certification_tv_compcard"
                style="@style/TV_Certification"
                android:text="@string/business_license_num" />

            <EditText
                android:id="@+id/certification_ed_compnum"
                style="@style/ED_Certification"
                android:layout_toRightOf="@id/certification_tv_compcard"
                android:hint="@string/input_business_license_num" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/line_certification" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:id="@+id/certification_tv_field"
                style="@style/TV_Certification"
                android:text="@string/business_field" />

            <TextView
                android:id="@+id/certification_tv_field1"
                style="@style/ED_Certification"
                android:layout_alignParentRight="true"
                android:layout_marginRight="13dp"
                android:layout_toRightOf="@id/certification_tv_field"
                android:drawableRight="@mipmap/iconfont_right_arrow"
                android:hint="@string/select_business_field"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/certification_btn_next"
        android:layout_width="312dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_code_orange"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="17sp" />
</LinearLayout>
