<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_certification"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/title_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/id_card_photo"
                    android:textColor="#1b1b1b"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:text="@string/ps_good_photo"
                    android:textColor="#747474"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/certification_rl_idcard_zheng"
                        android:layout_width="144dp"
                        android:layout_height="87dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="12dp"
                        android:layout_weight="1"
                        android:background="@color/bg_add_photo">

                        <TextView
                            android:id="@+id/tv_idcard_zheng"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:drawablePadding="4.5dp"
                            android:drawableTop="@mipmap/iconfont_add"
                            android:text="@string/add_photo"
                            android:textColor="#747474"
                            android:textSize="13sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/certification_rl_idcard_fan"
                        android:layout_width="144dp"
                        android:layout_height="87dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_weight="1"
                        android:background="@color/bg_add_photo">

                        <TextView
                            android:id="@+id/tv_idcard_fan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:drawablePadding="4.5dp"
                            android:drawableTop="@mipmap/iconfont_add"
                            android:text="@string/add_photo"
                            android:textColor="#747474"
                            android:textSize="13sp" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:layout_marginTop="9dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/id_card_zheng"
                        android:textColor="#747474"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/id_card_fan"
                        android:textColor="#747474"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="9dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/certification_tv_idcard"
                        style="@style/TV_Certification"
                        android:text="@string/id_card_num" />

                    <EditText
                        android:id="@+id/certification_ed_idnum"
                        style="@style/ED_Certification"
                        android:layout_toRightOf="@id/certification_tv_idcard"
                        android:hint="@string/input_id_card_num"
                        android:maxLength="18"
                        android:singleLine="true" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/line_certification" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/certification_tv_name"
                        style="@style/TV_Certification"
                        android:text="@string/real_name" />

                    <EditText
                        android:id="@+id/certification_ed_name"
                        style="@style/ED_Certification"
                        android:layout_toRightOf="@id/certification_tv_name"
                        android:hint="@string/input_real_name"
                        android:singleLine="true" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/line_certification" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/certification_tv_company_name"
                        style="@style/TV_Certification"
                        android:text="@string/company_name" />

                    <EditText
                        android:id="@+id/certification_ed_company_name"
                        style="@style/ED_Certification"
                        android:layout_toRightOf="@id/certification_tv_company_name"
                        android:hint="@string/input_company_name" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/line_certification" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/certification_tv_company_addr"
                        style="@style/TV_Certification"
                        android:text="@string/company_addr" />

                    <TextView
                        android:id="@+id/certification_tv_company_addr1"
                        style="@style/ED_Certification"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="13dp"
                        android:layout_toRightOf="@id/certification_tv_company_addr"
                        android:drawableRight="@mipmap/iconfont_right_arrow"
                        android:hint="@string/select_company_addr" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/line_certification" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_position"
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/certification_tv_position"
                        style="@style/TV_Certification"
                        android:text="@string/position" />

                    <EditText
                        android:id="@+id/certification_ed_position"
                        style="@style/ED_Certification"
                        android:layout_toRightOf="@id/certification_tv_position"
                        android:hint="@string/input_position"
                        android:singleLine="true" />

                    <View
                        android:id="@+id/line"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/line_certification" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_field"
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/tv_field"
                        style="@style/TV_Certification"
                        android:text="投资领域" />

                    <TextView
                        android:id="@+id/tv_select_field"
                        style="@style/ED_Certification"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="13dp"
                        android:layout_toRightOf="@id/tv_field"
                        android:drawableRight="@mipmap/iconfont_right_arrow"
                        android:hint="请选择投资领域" />
                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/certification_btn_next"
                android:layout_width="312dp"
                android:layout_height="39dp"
                android:layout_marginBottom="38dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/bg_code_orange"
                android:text="@string/next"
                android:textColor="@android:color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
